# skill-safe

./: .gitignore  LICENSE  PROPOSED_PLAN.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/service/: __init__.py  __main__.py  history.py  scan_service.py  server.py
app/ui/: __init__.py  app.js  index.html  styles.css
docs/: i18n-message-design.md  llm-provider-adapter.md  report-schema-draft.md  skill-safe-config-schema.md  skill-security-taxonomy.md  skill-security-threat-research.md
skill_safe/: __main__.py  admission.py  cli.py  config.py  diffing.py  dynamic.py  engine.py  explain.py  flow.py  ingest.py  llm_config.py  models.py  policy.py  reporting.py  scoring.py  semantic.py
skill_safe/i18n/: __init__.py  catalog.py
skill_safe/scanners/: __init__.py  rules.py  static.py
tests/: test_app_service.py  test_scan.py
tests/fixtures/alignment_skill/: SKILL.md  skill.json
tests/fixtures/basic_skill/: SKILL.md  skill.json
tests/fixtures/credential_leak_skill/: SKILL.md  debug.py  skill.json
tests/fixtures/destructive_skill/: SKILL.md  skill.json
tests/fixtures/diff_case_v1/: SKILL.md  skill.json
tests/fixtures/diff_case_v2/: SKILL.md  skill.json
tests/fixtures/diff_flow_v1/: SKILL.md
tests/fixtures/diff_flow_v2/: SKILL.md  skill.json
tests/fixtures/flow_context_skill/: SKILL.md  skill.json
tests/fixtures/flow_param_skill/: SKILL.md  skill.json
tests/fixtures/memory_writer_skill/: SKILL.md  skill.json
tests/fixtures/network_skill/: SKILL.md  skill.json
(+14 files in other folders)
